--- a/template/index.html
+++ b/template/index.html
@@ -9,7 +9,7 @@
 
 		<title>__TITLE__</title>
 
-		<link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/album/">
+		<link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
 		<!-- Bootstrap core CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -51,7 +51,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="navbar navbar-dark bg-dark box-shadow">
+			<div class="navbar navbar-dark bg-dark shadow-sm">
 				<div class="container d-flex justify-content-between">
 					<a href="#" class="navbar-brand d-flex align-items-center">
 						<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="mr-2" viewBox="0 0 24 24" focusable="false"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
@@ -79,7 +79,7 @@
 					<div class="row">
 <!-- ROWROWROW -->
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="__IMAGE__" data-toggle2="lightbox" data-gallery2="__PLOT__">
 									<img class="card-img-top" src="__IMAGE__">
 								</a>
@@ -116,7 +116,7 @@
 		<!-- Bootstrap core JavaScript
 		================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="js/jquery-3.2.1.slim.min.js"></script>
+		<script src="js/jquery-3.5.1.slim.min.js"></script>
 		<script src="js/popper.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/ekko-lightbox.min.js"></script>
