--- a/template/index.html
+++ b/template/index.html
@@ -14,12 +14,11 @@
 		<!-- Bootstrap core CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 
+		<link href="css/ekko-lightbox.css" rel="stylesheet">
+
 		<!-- Custom styles for this template -->
 		<link href="css/album.css" rel="stylesheet">
 
-		<link href="css/ekko-lightbox.css" rel="stylesheet">
-
-		<link href="css/styles.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -46,7 +45,7 @@
 			</div>
 			<div class="navbar navbar-dark bg-dark shadow-sm">
 				<div class="container d-flex justify-content-between">
-					<a href="#" class="navbar-brand d-flex align-items-center text-truncate">
+					<a href="#" class="navbar-brand align-items-center text-truncate">
 						<strong>__TITLE__</strong>
 					</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
