Canvi en alguns texts + phpcs

--- a/template/index.html
+++ b/template/index.html
@@ -29,6 +29,7 @@
                             <h4 class="text-white">__ABOUT__</h4>
                             <p class="text-muted">__FOOTER__</p>
                             <p class="text-muted">__MOMOOLD__</p>
+                            <p class="text-muted">__MOMOOLD2__</p>
                         </div>
                         <div class="col-sm-4 offset-md-1 py-4">
                             <h4 class="text-white">__LANG__</h4>
