--- a/template/index.html
+++ b/template/index.html
@@ -10,12 +10,12 @@
         <title>__TITLE__</title>
 
         <!-- Bootstrap core CSS -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet" />
 
-        <link href="css/ekko-lightbox.css" rel="stylesheet">
+        <link href="css/ekko-lightbox.css" rel="stylesheet" />
 
         <!-- Custom styles for this template -->
-        <link href="css/album.css" rel="stylesheet">
+        <link href="css/album.css" rel="stylesheet" />
 
     </head>
 
@@ -104,8 +104,8 @@
             </div>
         </footer>
 
-        <!-- Bootstrap core JavaScript
-        ================================================== -->
+        <!-- Bootstrap core JavaScript -->
+        <!-- ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="js/jquery-3.5.1.slim.min.js"></script>
         <script src="js/popper.min.js"></script>
